syntax = "proto3";
package test;

service EchoService {
  rpc Echo(EchoRequest) returns (EchoResponse){}
}

message EchoRequest {
  string message = 1;
}

message EchoResponse {
  string message = 1;
}

